# matio

./: .install_hdf5_1_10.sh  .install_hdf5_1_8.sh  .travis.yml  CMakeLists.txt  configure.ac  testMatio.cpp
cmake/: options.cmake  src.cmake  thirdParties.cmake
src/: Makefile.am  mat5.c
test/: Makefile.am
visual_studio/: matioConfig.h
